--- a/idex.html
+++ b/idex.html
@@ -1,319 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine's Day for Akshu</title>
-    <style>
-        /* Global Styles */
-        body {
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom right, #f472b6, #ef4444); /* Pink to Red */
-            color: white;
-            overflow-x: hidden;
-            min-height: 100vh;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hey Akshu ❤️</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
-        /* Floating Hearts Animation */
-        .floating-hearts {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            overflow: hidden;
-        }
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
 
-        .heart {
-            position: absolute;
-            font-size: 2rem;
-            animation: float 10s infinite linear;
-        }
+    body {
+      height: 100vh;
+      overflow-x: hidden;
+      background: linear-gradient(135deg, #ff4e88, #ff1e56, #ff6fa3);
+      color: white;
+      text-align: center;
+    }
 
-        .heart:nth-child(odd) {
-            animation-duration: 12s;
-        }
+    /* Floating hearts */
+    .heart {
+      position: fixed;
+      bottom: -10px;
+      font-size: 20px;
+      animation: floatUp 6s linear infinite;
+      opacity: 0.7;
+    }
 
-        .heart:nth-child(even) {
-            animation-duration: 8s;
-        }
+    @keyframes floatUp {
+      0% { transform: translateY(0); opacity: 0.7; }
+      100% { transform: translateY(-110vh); opacity: 0; }
+    }
 
-        @keyframes float {
-            0% {
-                transform: translateY(100vh) rotate(0deg);
-                opacity: 1;
-            }
-            100% {
-                transform: translateY(-100vh) rotate(360deg);
-                opacity: 0;
-            }
-        }
+    header {
+      padding-top: 60px;
+    }
 
-        /* Memory Card Hover Pulse */
-        .memory-card:hover {
-            animation: pulse 1s infinite;
-        }
+    h1 {
+      font-size: 3rem;
+      animation: pulse 2s infinite;
+    }
 
-        @keyframes pulse {
-            0%, 100% {
-                transform: scale(1);
-            }
-            50% {
-                transform: scale(1.05);
-            }
-        }
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
 
-        /* Button Styles */
-        .btn {
-            font-size: 1.25rem;
-            padding: 1rem 2rem;
-            border: none;
-            border-radius: 50px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
+    .cupid {
+      font-size: 2rem;
+      animation: bounce 1.5s infinite;
+    }
 
-        .btn-yes {
-            background: #22c55e;
-            animation: bounce 2s infinite;
-        }
+    @keyframes bounce {
+      0%,100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
 
-        .btn-yes:hover {
-            background: #16a34a;
-        }
+    .message {
+      margin: 40px auto;
+      max-width: 600px;
+      font-size: 1.2rem;
+      line-height: 1.6;
+    }
 
-        .btn-no {
-            background: #ef4444;
-            position: relative;
-        }
+    .memories {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 20px;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
 
-        .btn-no:hover {
-            background: #dc2626;
-        }
+    .card {
+      background: rgba(255, 255, 255, 0.15);
+      border-radius: 15px;
+      padding: 20px;
+      backdrop-filter: blur(10px);
+      transition: transform 0.3s, background 0.3s;
+    }
 
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% {
-                transform: translateY(0);
-            }
-            40% {
-                transform: translateY(-10px);
-            }
-            60% {
-                transform: translateY(-5px);
-            }
-        }
+    .card:hover {
+      transform: scale(1.08);
+      background: rgba(255, 255, 255, 0.25);
+    }
 
-        /* Sections */
-        section {
-            padding: 4rem 1rem;
-            text-align: center;
-        }
+    .buttons {
+      margin: 40px 0;
+      position: relative;
+      height: 120px;
+    }
 
-        .hero h1 {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            animation: pulse 2s infinite;
-        }
+    button {
+      padding: 12px 25px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      position: absolute;
+      transition: all 0.3s ease;
+    }
 
-        .hero .cupid {
-            animation: bounce 2s infinite;
-        }
+    #yesBtn {
+      background: #fff;
+      color: #ff1e56;
+      left: 40%;
+    }
 
-        .memories-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
+    #noBtn {
+      background: #ff1e56;
+      color: white;
+      left: 55%;
+    }
 
-        .memory-card {
-            background: rgba(255, 255, 255, 0.2);
-            padding: 1.5rem;
-            border-radius: 10px;
-            transition: transform 0.3s;
-        }
+    #successMessage {
+      display: none;
+      font-size: 1.5rem;
+      margin-top: 20px;
+      animation: fadeIn 1s forwards;
+    }
 
-        .memory-card h3 {
-            font-size: 1.5rem;
-            margin-bottom: 0.5rem;
-        }
+    @keyframes fadeIn {
+      from {opacity: 0;}
+      to {opacity: 1;}
+    }
 
-        .memory-card .emoji {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-        }
+    /* Music player */
+    .music-player {
+      position: fixed;
+      bottom: 15px;
+      right: 15px;
+      background: rgba(255,255,255,0.2);
+      padding: 10px 15px;
+      border-radius: 20px;
+      backdrop-filter: blur(10px);
+    }
 
-        .question {
-            position: relative;
-        }
-
-        .buttons {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 1rem;
-        }
-
-        .success-message {
-            display: none;
-            font-size: 1.5rem;
-            font-weight: bold;
-            animation: pulse 2s infinite;
-            margin-top: 2rem;
-        }
-
-        .music-player {
-            position: fixed;
-            bottom: 1rem;
-            right: 1rem;
-            background: rgba(255, 255, 255, 0.2);
-            padding: 1rem;
-            border-radius: 10px;
-            font-size: 0.875rem;
-        }
-
-        /* Mobile Responsiveness */
-        @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 2rem;
-            }
-            .memories-grid {
-                grid-template-columns: 1fr;
-            }
-            .buttons {
-                flex-direction: column;
-            }
-        }
-    </style>
+    @media (max-width: 600px) {
+      h1 { font-size: 2rem; }
+      .message { font-size: 1rem; padding: 0 10px; }
+    }
+  </style>
 </head>
 <body>
-    <!-- Floating Hearts Background -->
-    <div class="floating-hearts">
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-        <span class="heart">❤️</span>
-    </div>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <h1>Hey Akshu <span class="cupid">🏹</span></h1>
-        <p>Will you be my Valentine? 💕</p>
-    </section>
+  <header>
+    <div class="cupid">💘</div>
+    <h1>Hey Akshu ❤️</h1>
+  </header>
 
-    <!-- Love Message Section -->
-    <section>
-        <h2>Our Special Memories 🌹</h2>
-        <p>Remember doing potato together? You love small cute things, we love to kiss 😘, you adore pasta 🍝, and my goatee always makes you smile! Let's make more memories. ❤️</p>
-    </section>
+  <div class="message">
+    From doing potato together 🥔 to sharing pasta dates 🍝,  
+    from endless kisses 😘 to that handsome goatee I secretly love 😍 —  
+    every tiny moment with you feels like magic ✨  
+    You love small cute things… so here’s one more 💖
+  </div>
 
-    <!-- Memories Grid -->
-    <section>
-        <div class="memories-grid">
-            <div class="memory-card">
-                <div class="emoji">🥔</div>
-                <h3>Doing Potato</h3>
-                <p>Our fun adventures with potatoes!</p>
-            </div>
-            <div class="memory-card">
-                <div class="emoji">🧸</div>
-                <h3>Small Cute Things</h3>
-                <p>You love all the tiny treasures!</p>
-            </div>
-            <div class="memory-card">
-                <div class="emoji">😘</div>
-                <h3>Kisses</h3>
-                <p>Our sweetest moments!</p>
-            </div>
-            <div class="memory-card">
-                <div class="emoji">🍝</div>
-                <h3>Pasta</h3>
-                <p>Your favorite dish, made with love!</p>
-            </div>
-        </div>
-    </section>
+  <div class="memories">
+    <div class="card">🥔<br>Doing Potato</div>
+    <div class="card">🍝<br>Pasta Dates</div>
+    <div class="card">😘<br>All the Kisses</div>
+    <div class="card">🧔<br>The Goatee</div>
+  </div>
 
-    <!-- Question Section -->
-    <section class="question">
-        <h2>So, Akshu... 💖</h2>
-        <div class="buttons">
-            <button class="btn btn-yes" id="yes-btn">Yes! 😍</button>
-            <button class="btn btn-no" id="no-btn">No 😢</button>
-        </div>
-        <div class="success-message" id="success-msg">Yay! You said yes! Let's celebrate! 🎉❤️</div>
-    </section>
+  <div class="buttons">
+    <button id="yesBtn">Yes 💖</button>
+    <button id="noBtn">No 🙈</button>
+  </div>
 
-    <!-- Music Player -->
-    <div class="music-player">
-        <p>🎵 Die with a Smile - Bruno Mars & Lady Gaga</p>
-        <button id="play-pause-btn">Play</button>
-        <audio id="audio-player" src="path/to/die-with-a-smile.mp3" preload="none"></audio> <!-- Replace with actual path -->
-    </div>
+  <div id="successMessage">YAYYY 💍💖 You just made me the happiest person alive!!! 🥰</div>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-    <script>
-        // Music Player
-        const audio = document.getElementById('audio-player');
-        const playPauseBtn = document.getElementById('play-pause-btn');
-        playPauseBtn.addEventListener('click', () => {
-            if (audio.paused) {
-                audio.play();
-                playPauseBtn.textContent = 'Pause';
-            } else {
-                audio.pause();
-                playPauseBtn.textContent = 'Play';
-            }
-        });
+  <!-- Music -->
+  <div class="music-player">
+    🎵 Our Song  
+    <audio id="bgMusic" loop>
+      <source src="song.mp3" type="audio/mpeg">
+    </audio>
+    <button onclick="toggleMusic()">Play / Pause</button>
+  </div>
 
-        // No Button Run Away
-        const noBtn = document.getElementById('no-btn');
-        noBtn.addEventListener('mouseenter', () => {
-            const container = noBtn.parentElement;
-            const containerRect = container.getBoundingClientRect();
-            const btnRect = noBtn.getBoundingClientRect();
-            const maxX = containerRect.width - btnRect.width;
-            const maxY = containerRect.height - btnRect.height;
-            const newX = Math.random() * maxX;
-            const newY = Math.random() * maxY;
-            noBtn.style.position = 'absolute';
-            noBtn.style.left = `${newX}px`;
-            noBtn.style.top = `${newY}px`;
-        });
+  <script>
+    // Floating hearts
+    function createHeart() {
+      const heart = document.createElement("div");
+      heart.classList.add("heart");
+      heart.innerHTML = "❤️";
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.animationDuration = (Math.random() * 3 + 3) + "s";
+      document.body.appendChild(heart);
+      setTimeout(() => heart.remove(), 6000);
+    }
+    setInterval(createHeart, 400);
 
-        // Yes Button Confetti
-        const yesBtn = document.getElementById('yes-btn');
-        const successMsg = document.getElementById('success-msg');
-        yesBtn.addEventListener('click', () => {
-            confetti({
-                particleCount: 100,
-                spread: 70,
-                origin: { y: 0.6 }
-            });
-            successMsg.style.display = 'block';
-            setTimeout(() => {
-                successMsg.style.display = 'none';
-            }, 5000); // Hide after 5 seconds
-        });
-    </script>
+    // No button runs away
+    const noBtn = document.getElementById("noBtn");
+    noBtn.addEventListener("mouseover", () => {
+      noBtn.style.left = Math.random() * 80 + "%";
+      noBtn.style.top = Math.random() * 80 + "%";
+    });
+
+    // Yes button celebration
+    const yesBtn = document.getElementById("yesBtn");
+    const successMessage = document.getElementById("successMessage");
+    yesBtn.addEventListener("click", () => {
+      successMessage.style.display = "block";
+      alert("She said YES!!! 💖🎉");
+    });
+
+    // Music toggle
+    const music = document.getElementById("bgMusic");
+    function toggleMusic() {
+      if (music.paused) music.play();
+      else music.pause();
+    }
+  </script>
+
 </body>
 </html>
