Update image file extensions from .jpg to .jpeg

--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@ button{
 <div class="gallery">
   <h2>Our Cute Memories 📸</h2>
   <div class="photos">
-    <img src="photo1.jpg">
-    <img src="photo2.jpg">
-    <img src="photo3.jpg">
-    <img src="photo4.jpg">
+    <img src="photo1.jpeg">
+    <img src="photo2.jpeg">
+    <img src="photo3.jpeg">
+    <img src="photo4.jpeg">
   </div>
 </div>
 
