--- a/index.html
+++ b/index.html
@@ -169,17 +169,17 @@ button{
 </header>
 
 <div class="message">
-  From sharing pasta dates 🍝,<br>
+  From dropping you and picking you up on my scooter 🛵💞,<br>
+  to our little random talks on the way that I never want to end 🥹,<br>
   to endless kisses 😘 and that handsome goatee I secretly love 😍 —<br>
   every tiny moment with you feels like magic ✨<br>
   You love small cute things… so here’s one more 💖
 </div>
-
 <div class="memories">
   <div class="card">🍝<br>Pasta Dates</div>
   <div class="card">😘<br>All the Kisses</div>
   <div class="card">🧔<br>The Goatee</div>
-  <div class="card">💞<br>Our Little World</div>
+  <div class="card">🛵<br>Scooter Rides</div>
 </div>
 
 <!-- PHOTO GALLERY -->
@@ -199,7 +199,7 @@ button{
 </div>
 
 <div id="successMessage">
-  YAYYY 💍💖 You just made me the happiest person alive!!! 🥰
+  my cute pandi nigger 🥰
 </div>
 
 <audio id="bgMusic" loop preload="auto">
